move role from org Critical VMs repo

--- a/roles/hcp_vault_ssh_setup/tasks/main.yml
+++ b/roles/hcp_vault_ssh_setup/tasks/main.yml
@@ -11,9 +11,9 @@
     ssh_private_key: >-
       {{
         lookup('community.hashi_vault.hashi_vault',
-          'secret={{ vault_path }}:{{vault_secret_field}}',
+          'secret={{ vault_vm_ssh_access_key_path }}:{{ vault_vm_ssh_access_key_field }}',
           engine_version=2,
-          secret_mount_point='{{ vault_secret_mount_point }}',
+          secret_mount_point='{{ vault_vm_ssh_access_key_mount_point }}',
           auth_method='approle',
           auth_mount='approle',
           role_id=lookup('env', 'ANSIBLE_HASHI_VAULT_ROLE_ID'),
