--- a/roles/hcp_vault_ssh_setup/defaults/main.yml
+++ b/roles/hcp_vault_ssh_setup/defaults/main.yml
@@ -1,12 +1,11 @@
 vault_url: "{{ lookup('env', 'ANSIBLE_HASHI_VAULT_ADDR') | default('http://localhost:8200', true) }}"
 vault_role_id: "{{ lookup('env', 'ANSIBLE_HASHI_VAULT_ROLE_ID') }}"
 vault_secret_id: "{{ lookup('env', 'ANSIBLE_HASHI_VAULT_SECRET_ID') }}"
-vault_secret_mount_point: "{{ lookup('env', 'ANSIBLE_HASHI_VAULT_SECRET_MOUNT_POINT') }}"
-vault_secret_field: "{{ lookup('env', 'ANSIBLE_HASHI_VAULT_SECRET_FIELD') | default('private_key', true) }}"
-vault_path: "{{ inventory_hostname }}"
-vault_auth_method: "approle"
-vault_auth_mount: "approle"
-vault_engine_version: 2
 vault_validate_certs: "{{ lookup('env', 'ANSIBLE_HASHI_VAULT_VALIDATE_CERTS') | default(true, true) }}"
+
+vault_vm_ssh_access_key_mount_point: "{{ lookup('env', 'ANSIBLE_HASHI_VAULT_SECRET_MOUNT_POINT') }}"
+vault_vm_ssh_access_key_field: "{{ lookup('env', 'ANSIBLE_HASHI_VAULT_SECRET_FIELD') | default('private_key', true) }}"
+vault_vm_ssh_access_key_path: "{{ inventory_hostname }}"
+
 ssh_key_temp_dir: "./tmp"
 ssh_key_temp_path: "{{ ssh_key_temp_dir }}/{{ inventory_hostname }}_id_rsa"
