--- a/roles/hcp_nomad/defaults/main.yml
+++ b/roles/hcp_nomad/defaults/main.yml
@@ -1,7 +1,8 @@
-consul_version: "1.21.4"
-consul_user: "consul"
-consul_group: "consul"
-consul_install_dir: "/usr/local/bin"
-consul_config_dir: "/etc/consul.d"
-consul_data_dir: "/opt/consul"
+nomad_version: "1.10.4"
+nomad_user: "nomad"
+nomad_group: "nomad"
+nomad_install_dir: "/usr/local/bin"
+nomad_config_dir: "/etc/nomad.d"
+nomad_data_dir: "/opt/nomad"
+nomad_alloc_dir: "/opt/alloc_mounts"
 cluster_size: 3
