--- a/roles/hcp_consul/defaults/main.yml
+++ b/roles/hcp_consul/defaults/main.yml
@@ -1,8 +1,7 @@
-nomad_version: "1.10.4"
-nomad_user: "nomad"
-nomad_group: "nomad"
-nomad_install_dir: "/usr/local/bin"
-nomad_config_dir: "/etc/nomad.d"
-nomad_data_dir: "/opt/nomad"
-nomad_alloc_dir: "/opt/alloc_mounts"
+consul_version: "1.21.4"
+consul_user: "consul"
+consul_group: "consul"
+consul_install_dir: "/usr/local/bin"
+consul_config_dir: "/etc/consul.d"
+consul_data_dir: "/opt/consul"
 cluster_size: 3
