--- a/roles/hcp_nomad/defaults/main.yml
+++ b/roles/hcp_nomad/defaults/main.yml
@@ -5,4 +5,5 @@ nomad_install_dir: "/usr/local/bin"
 nomad_config_dir: "/etc/nomad.d"
 nomad_data_dir: "/opt/nomad"
 nomad_alloc_dir: "/opt/alloc_mounts"
+nomad_inventory_group_name: "nomad"
 cluster_size: 3
