updat HCP consul and nomad roles

--- a/roles/hcp_consul/defaults/main.yml
+++ b/roles/hcp_consul/defaults/main.yml
@@ -5,4 +5,5 @@ consul_install_dir: "/usr/local/bin"
 consul_config_dir: "/etc/consul.d"
 consul_data_dir: "/opt/consul"
 consul_inventory_group_name: "nomad"
-cluster_size: 3
+inventory_server_group: "nomad_server"
+inventory_client_group: "nomad_client"
