--- a/roles/hcp_nomad/defaults/main.yml
+++ b/roles/hcp_nomad/defaults/main.yml
@@ -1,9 +1,15 @@
 nomad_version: "1.10.4"
+nomad_cni_plugins_version: "1.8.0"
+
 nomad_user: "nomad"
 nomad_group: "nomad"
+
 nomad_install_dir: "/usr/local/bin"
 nomad_config_dir: "/etc/nomad.d"
 nomad_data_dir: "/opt/nomad"
 nomad_alloc_dir: "/opt/alloc_mounts"
-nomad_inventory_group_name: "nomad"
-cluster_size: 3
+nomad_cni_plugins_dir: "/opt/cni/bin"
+nomad_cni_config_dir: "/etc/cni/net.d"
+
+inventory_server_group: "nomad_server"
+inventory_client_group: "nomad_client"
